Fix router catch-all and homepage

--- a/studysync-frontend/package.json
+++ b/studysync-frontend/package.json
@@ -1,5 +1,7 @@
 {
   "name": "studysync-frontend",
+  "homepage": "https://harshaappikatla.github.io/Study-Sync/",
+  "homepage": "https://harshaappikatla.github.io/Study-Sync/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
